# Pytagoras

./: environment.yml  pyproject.toml
.github/workflows/: python-app.yml
src/Pytagoras/: calc.py
tests/: test_calc.py
